--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-Flask==1.1.1
-SQLAlchemy==1.3.11
-requests==2.22.0
-sentry-sdk[flask]==0.13.4
-pytest==5.0.1
+Flask==1.1.*
+SQLAlchemy==1.3.*
+requests==2.22.*
+sentry-sdk[flask]==0.13.*
+pytest==5.*
+beautifulsoup4==4.9.*
+gunicorn==19.9.*
+psycopg2==2.8.*
+setuptools
