--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ graft organizer/static
 graft organizer/templates
 include Procfile
 include runtime.txt
+include requirements.txt
 global-exclude *.pyc
 prune tests
