--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,7 +21,7 @@ pipelines:
             - pipe: atlassian/heroku-deploy:1.1.4
               variables:
                 HEROKU_API_KEY: $HEROKU_API_KEY
-                HEROKU_APP_NAME: $HEROKU_APP_NAME
+                HEROKU_APP_NAME: $TEST_HEROKU_APP_NAME
                 ZIP_FILE: 'dist/trips_organizer-0.3.tar.gz'
   pull-requests:
     feature/*:
@@ -33,11 +33,3 @@ pipelines:
           script:
             - pip install -r requirements.txt
             - python -m pytest
-deployment:
-  script:
-    - python sdist
-    - pipe: atlassian/heroku-deploy:1.1.4
-      variables:
-        HEROKU_API_KEY: $HEROKU_API_KEY
-        HEROKU_APP_NAME: $HEROKU_APP_NAME
-        ZIP_FILE: 'dist/trips_organizer-0.3.tar.gz'
