--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,9 +1,10 @@
+image: python:3.7
+
 pipelines:
   branches:
     master:
       - step:
-          name: 'Python 3.7 testing'
-          image: python:3.7
+          name: 'Run tests'
           caches:
             - pip
           script:
@@ -12,7 +13,6 @@ pipelines:
       - step:
           name: Build and push to Heroku test environment
           deployment: test
-          image: python:3.7
           caches:
             - pip
           script:
@@ -26,10 +26,24 @@ pipelines:
   pull-requests:
     feature/*:
       - step:
-          name: 'Python 3.7 testing'
-          image: python:3.7
+          name: 'Run tests'
           caches:
             - pip
           script:
             - pip install -r requirements.txt
             - python -m pytest
+  custom:
+    deploy-to-prod:
+      - step:
+          name: 'Deploy to production environment'
+          deployment: production
+          caches:
+            - pip
+          script:
+              - pip install -r requirements.txt
+              - python setup.py sdist
+              - pipe: atlassian/heroku-deploy:1.1.4
+                variables:
+                  HEROKU_API_KEY: $HEROKU_API_KEY
+                  HEROKU_APP_NAME: $PROD_HEROKU_APP_NAME
+                  ZIP_FILE: 'dist/trips_organizer-0.3.tar.gz'
