--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==1.1.*
-SQLAlchemy==1.3.*
-requests==2.22.*
-sentry-sdk[flask]==0.13.*
-pytest==5.*
-beautifulsoup4==4.9.*
-gunicorn==19.9.*
-psycopg2==2.8.*
+Flask==2.1.*
+SQLAlchemy==1.4.*
+requests==2.27.*
+sentry-sdk[flask]==1.5.*
+pytest==7.*.*
+beautifulsoup4==4.11.*
+gunicorn==20.1.*
+psycopg2-binary==2.9.*
