--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,10 +1,10 @@
-Flask==2.1.3
+Flask==2.2.*
 SQLAlchemy==1.4.39
 requests==2.27.1
 sentry-sdk[flask]==1.7.2
 pytest==7.1.2
-beautifulsoup4==4.11.1
+beautifulsoup4==4.11.*
 greenlet==1.1.2
 gunicorn==20.1.0
 psycopg2_binary==2.9.3
-alembic==1.8.1
+alembic==1.10.*
