--- a/web/package.json
+++ b/web/package.json
@@ -1,16 +1,26 @@
 {
-    "name": "web",
-    "private": true,
-    "version": "0.0.0",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "devDependencies": {
-        "vite": "^2.9.9"
-    },
-    "dependencies": {
-        "bootstrap": "^4.6.1"
-    }
+  "name": "web",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "typescript": "^5.0.4",
+    "vite": "^3.2.6",
+    "vite-plugin-mock-server": "^1.0.4",
+    "vue-tsc": "^1.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.5.1",
+    "mande": "^2.0.2",
+    "popper.js": "^1.16.1",
+    "vue": "^3.2.7",
+    "vue-i18n": "^9.1.10"
+  }
 }
