--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/jquery": "^3.5.16",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^5.0.4",
@@ -16,8 +17,10 @@
     "vue-tsc": "^1.6.1"
   },
   "dependencies": {
-    "bootstrap": "^4.6.1",
-    "jquery": "^3.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "bootstrap": "^5.0.2",
     "mande": "^2.0.2",
     "popper.js": "^1.16.1",
     "vue": "^3.2.7",
