--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "mande": "^2.0.2",
     "popper.js": "^1.16.1",
     "vue": "^3.2.7",
-    "vue-i18n": "^9.1.10"
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.1.6"
   }
 }
