--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -3,18 +3,10 @@ upstream application {
 }
 
 server {
-    listen 80;
-    server_name _;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen              443 ssl;
+    listen              6161;
     server_name         hikehub.ru;
-    ssl_certificate     /etc/ssl/private/letsencrypt-domain.pem;
-    ssl_certificate_key /etc/ssl/private/letsencrypt-domain.key;
 
-    location ~ /(api|trips|meals|products|reports|auth|developer|users) {
+    location ~ /(api|trips|meals|reports|auth|developer|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,6 +15,11 @@ server {
         proxy_set_header X-Forwarded-Prefix /;
 
         proxy_pass http://application;
+    }
+
+    location /products/ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /products.html;
     }
 
     location / {
