--- a/web/package.json
+++ b/web/package.json
@@ -10,21 +10,22 @@
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "@types/jquery": "^3.5.16",
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^4.4.0",
     "typescript": "^5.0.4",
-    "vite": "^3.2.6",
-    "vite-plugin-mock-server": "^1.0.4",
-    "vue-tsc": "^1.6.1"
+    "vite": "^4.4.11",
+    "vite-plugin-mock-server": "^1.1.0",
+    "vue-tsc": "^1.8.16"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "bootstrap": "^5.0.2",
-    "mande": "^2.0.2",
+    "mande": "^2.0.8",
+    "pinia": "^2.1.6",
     "popper.js": "^1.16.1",
-    "vue": "^3.2.7",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.2.5"
   }
 }
