--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -6,7 +6,7 @@ server {
     listen              6161;
     server_name         hikehub.ru;
 
-    location ~ /(api|trips|meals|reports|auth|developer|users) {
+    location ~ /(api|meals|reports|auth|developer|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,6 +15,11 @@ server {
         proxy_set_header X-Forwarded-Prefix /;
 
         proxy_pass http://application;
+    }
+
+    location /trips/ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /trips.html;
     }
 
     location /products/ {
