R14 migrate more to Vue (#2)
* Move to pinia

* Add fake data for trips

* Add trips app

* Page + vite config

* Componentize products and trips apps

* Update nginx config to use new trips page

* Move from fetch to mande

* Remove mentions of trips.index from Python code

--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -6,7 +6,12 @@ server {
     listen              6161;
     server_name         hikehub.ru;
 
-    location ~ /(api|trips|meals|reports|auth|developer|users) {
+    location ~ /trips/$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /trips.html;
+    }
+
+    location ~ /(api|trips/\w+|meals|reports|auth|developer|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,7 +22,7 @@ server {
         proxy_pass http://application;
     }
 
-    location /products/ {
+    location ~ /products/$ {
         root /var/www/hikehub.ru/;
         try_files $uri /products.html;
     }
