Remove admin page completely

--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -11,7 +11,7 @@ server {
         try_files $uri /trips.html;
     }
 
-    location ~ /(api|trips/\w+|meals|reports|auth|developer|users) {
+    location ~ /(api|trips/\w+|meals|reports|auth|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
