--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,10 +1,9 @@
-Flask==2.2.*
-SQLAlchemy==1.4.39
-requests==2.27.1
+Flask==2.3.*
+SQLAlchemy==1.4.51
+requests==2.31.*
 sentry-sdk[flask]==1.39.1
-pytest==7.1.2
+pytest==7.4.4
 beautifulsoup4==4.11.*
-greenlet==1.1.2
-gunicorn==20.1.0
-psycopg2_binary==2.9.3
-alembic==1.10.*
+gunicorn==21.2.0
+psycopg2==2.9.9
+alembic==1.13.*
