--- a/web/package.json
+++ b/web/package.json
@@ -4,15 +4,19 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "test": "vitest run",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vue/test-utils": "^2.4.3",
+    "jsdom": "^23.2.0",
     "typescript": "^5.3.3",
     "vite": "^4.5.1",
     "vite-plugin-mock-server": "^1.1.0",
+    "vitest": "^1.1.3",
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
