Fix routing for new reports page

--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -22,9 +22,9 @@ server {
         proxy_pass http://application;
     }
 
-    location ~ /reports/shopping/.*$ {
+    location ~ /reports/.*$ {
         root /var/www/hikehub.ru/;
-        try_files $uri /shopping.html;
+        try_files $uri /reports.html;
     }
 
     location ~ /products/$ {
