--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -11,7 +11,7 @@ server {
         try_files $uri /trips.html;
     }
 
-    location ~ /(api|trips/\w+|meals|auth|users) {
+    location ~ /(api|trips/\w+|auth|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,6 +20,11 @@ server {
         proxy_set_header X-Forwarded-Prefix /;
 
         proxy_pass http://application;
+    }
+
+    location ~ /meals/.*$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /meals.html;
     }
 
     location ~ /reports/.*$ {
