Move incorrect trip page to from the trip bp

--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -11,6 +11,11 @@ server {
         try_files $uri /trips.html;
     }
 
+    location ~ /trips/incorrect$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /incorrect.html;
+    }
+
     location ~ /(api|trips/\w+|auth|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
