--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -11,7 +11,12 @@ server {
         try_files $uri /trips.html;
     }
 
-    location ~ /(api|trips/\w+|meals|reports|auth|developer|users) {
+    location ~ /trips/incorrect$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /incorrect.html;
+    }
+
+    location ~ /(api|trips/\w+|auth|users) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,6 +25,16 @@ server {
         proxy_set_header X-Forwarded-Prefix /;
 
         proxy_pass http://application;
+    }
+
+    location ~ /meals/.*$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /meals.html;
+    }
+
+    location ~ /reports/.*$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /reports.html;
     }
 
     location ~ /products/$ {
