--- a/web/package.json
+++ b/web/package.json
@@ -4,17 +4,20 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "test": "vitest run",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
-    "@types/jquery": "^3.5.16",
     "@vitejs/plugin-vue": "^4.4.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.4.11",
+    "@vue/test-utils": "^2.4.3",
+    "jsdom": "^23.2.0",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.1",
     "vite-plugin-mock-server": "^1.1.0",
-    "vue-tsc": "^1.8.16"
+    "vitest": "^1.1.3",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -25,6 +28,7 @@
     "pinia": "^2.1.6",
     "popper.js": "^1.16.1",
     "vue": "^3.3.4",
+    "vue-datepicker-next": "^1.0.3",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.2.5"
   }
