Make request trips instead of ids

--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -6,12 +6,12 @@ server {
     listen              6161;
     server_name         hikehub.ru;
 
-    location ~ /trips/$ {
+    location ~ ^/trips/$ {
         root /var/www/hikehub.ru/;
         try_files $uri /trips.html;
     }
 
-    location ~ /trips/incorrect$ {
+    location ~ ^/trips/incorrect$ {
         root /var/www/hikehub.ru/;
         try_files $uri /incorrect.html;
     }
@@ -27,17 +27,17 @@ server {
         proxy_pass http://application;
     }
 
-    location ~ /meals/.*$ {
+    location ~ ^/meals/.*$ {
         root /var/www/hikehub.ru/;
         try_files $uri /meals.html;
     }
 
-    location ~ /reports/.*$ {
+    location ~ ^/reports/.*$ {
         root /var/www/hikehub.ru/;
         try_files $uri /reports.html;
     }
 
-    location ~ /products/$ {
+    location ~ ^/products/$ {
         root /var/www/hikehub.ru/;
         try_files $uri /products.html;
     }
