--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -16,7 +16,7 @@ server {
         try_files $uri /incorrect.html;
     }
 
-    location ~ /(api|trips/\w+|auth|users) {
+    location ~ /(api|trips/\w+|auth) {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -40,6 +40,11 @@ server {
     location ~ ^/products/$ {
         root /var/www/hikehub.ru/;
         try_files $uri /products.html;
+    }
+
+    location ~ ^/users/$ {
+        root /var/www/hikehub.ru/;
+        try_files $uri /users.html;
     }
 
     location / {
