--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.6",
+    "@types/bootstrap": "^5.2.10",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.3",
     "jsdom": "^23.2.0",
+    "sass": "^1.62.1",
     "typescript": "^5.3.3",
-    "vite": "^4.5.1",
+    "vite": "^4.5.2",
     "vite-plugin-mock-server": "^1.1.0",
     "vitest": "^1.1.3",
     "vue-tsc": "^1.8.27"
@@ -23,7 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.2.3",
     "mande": "^2.0.8",
     "pinia": "^2.1.6",
     "popper.js": "^1.16.1",
