--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,11 @@
     "@types/bootstrap": "^5.2.10",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.3",
+    "autoprefixer": "^10.4.17",
     "jsdom": "^23.2.0",
+    "postcss": "^8.4.33",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^4.5.2",
     "vite-plugin-mock-server": "^1.1.0",
