Fix password recovery capability

--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,4 @@ SERVER_NAME=localhost
 SENTRY_DSN=Your_sentry.io_DSN
 VK_APP_SECRET=Your_Vk_secret
 VK_CLIENT_ID=Your_Vk_client_ID
+BREVO_API_KEY=Your_Brevo_API_key
