--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.9'
-
 services:
   db:
-    image: postgres:14
+    image: postgres:14-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
