--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -51,4 +51,16 @@ server {
         root /var/www/hikehub.ru/;
         index index.html;
     }
+
+    location ~* \.(js|css)$ {
+        root /var/www/hikehub.ru/;
+        expires 1d;
+        add_header Cache-Control "public, must-revalidate";
+    }
+
+    location ~* \.(jpg|jpeg|png|gif|ico|mp4|webm|webp|svg|woff2)$ {
+        root /var/www/hikehub.ru/;
+        expires max;
+        add_header Cache-Control "public, must-revalidate";
+    }
 }
