--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -5,7 +5,7 @@
     "htmlWhitespaceSensitivity": "css",
     "insertPragma": false,
     "singleAttributePerLine": true,
-    "bracketSameLine": true,
+    "bracketSameLine": false,
     "printWidth": 80,
     "proseWrap": "preserve",
     "quoteProps": "as-needed",
