--- a/web/package.json
+++ b/web/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.27.0",
+    "eslint-plugin-vue": "^10.1.0",
     "postcss": "^8.4.33",
     "sass": "^1.83.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
   },
