--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,6 +4,6 @@ requests==2.31.*
 sentry-sdk[flask]==1.39.1
 pytest==7.4.4
 beautifulsoup4==4.11.*
-gunicorn==22.0.0
-psycopg2==2.9.9
+gunicorn==23.0.0
+psycopg2-binary==2.9.9
 alembic==1.13.*
