Add maintenance page with couple of optimization options

--- a/nginx/conf.d/hikehub.ru.conf
+++ b/nginx/conf.d/hikehub.ru.conf
@@ -37,9 +37,9 @@ server {
         try_files $uri /products.html;
     }
 
-    location ~ ^/users/$ {
+    location ~ ^/admin/.*$ {
         root /var/www/hikehub.ru/;
-        try_files $uri /users.html;
+        try_files $uri /admin.html;
     }
 
     location / {
